# Lab3_E403_Nhom3

./: .gitignore  app.py  evaluate.py  flake.nix  main.py  pyproject.toml  requirements.txt  run_test_cases.py
logs/: test_results.json
report/group_report/: GROUP_REPORT_Nhom3.md  group_report.md  traces.md
report/individual_reports/: Nguyễn Ngọc Hưng-individual_report.md  REPORT_DONG_VAN_THINH.md  REPORT_HuynhNhutHuy.md  REPORT_NGUYEN_NGOC_HIEU.md  REPORT_NGUYEN_NGOC_HUNG.md  REPORT_NGUYEN_NGOC_KHANH_DUY.md  REPORT_NGUYEN_THANH_LUAN.md  REPORT_Nguyễn Thành Luân.md
src/agent/: agent.py  agent_v2.py
src/chatbot/: chatbot.py
src/tools/: __init__.py  calculator.py  check_stock.py  get_discount.py  search.py
